--- a/.github/workflows/dev-pr.yml
+++ b/.github/workflows/dev-pr.yml
@@ -22,7 +22,7 @@ jobs:
           npm install
       - name: Run frontend tests
         env:
-          GOOGLE_APPLICATION_CREDENTIALS: ${{secrets.GOOGLE_APPLICATION_CREDENTIALS}}
+          GCP_SA_KEY: ${{secrets.GCP_SA_KEY}}
         working-directory: ${{env.APP_DIR}}
         run: npm run test-ci
       - name: Run firestore tests
