--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -16,6 +16,9 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: "18"
+      - uses: google-github-actions/auth@v1
+        with:
+          credentials_json: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
       - name: Install app dependencies
         working-directory: ${{env.APP_DIR}}
         run: |
@@ -48,9 +51,8 @@ jobs:
         working-directory: ${{env.APP_DIR}}
         run: npm run build
       - name: Deploy to firebase
-        uses: google-github-actions/auth@v1
-        with:
-          credentials_json: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS}}
+        env:
+          GOOGLE_APPLICATION_CREDENTIALS: ${{secrets.GOOGLE_APPLICATION_CREDENTIALS}}
         working-directory: ${{env.APP_DIR}}
         run: |
           npx firebase use ${{secrets.FIREBASE_DEV_PROJECT_ID}}
