--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -16,9 +16,6 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: "18"
-      - uses: google-github-actions/auth@v1
-        with:
-          credentials_json: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
       - name: Install app dependencies
         working-directory: ${{env.APP_DIR}}
         run: |
@@ -52,7 +49,7 @@ jobs:
         run: npm run build
       - name: Deploy to firebase
         env:
-          GOOGLE_APPLICATION_CREDENTIALS: ${{secrets.GOOGLE_APPLICATION_CREDENTIALS}}
+          FIREBASE_TOKEN: ${{secrets.FIREBASE_TOKEN}}
         working-directory: ${{env.APP_DIR}}
         run: |
           npx firebase use ${{secrets.FIREBASE_DEV_PROJECT_ID}}
@@ -95,4 +92,3 @@ jobs:
           AUTH_DOMAIN: ${{secrets.FIREBASE_DEV_AUTH_DOMAIN}}
         working-directory: ${{env.E2E_TESTS_DIR}}
         run: npm run test
-
