--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -16,6 +16,10 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: "18"
+      - uses: google-github-actions/auth@v1
+        with:
+          credentials_json: ${{ secrets.PROD_DEPLOY_SERVICE_ACCOUNT }}
+          service_account: ${{ secrets.PROD_DEPLOY_SERVICE_ACCOUNT_EMAIL }}
       - name: Install app dependencies
         working-directory: ${{env.APP_DIR}}
         run: |
@@ -45,8 +49,6 @@ jobs:
         working-directory: ${{env.APP_DIR}}
         run: npm run build
       - name: Deploy to firebase
-        env:
-          FIREBASE_TOKEN: ${{secrets.FIREBASE_TOKEN}}
         working-directory: ${{env.APP_DIR}}
         run: |
           npx firebase use ${{secrets.FIREBASE_PROD_PROJECT_ID}}
