--- a/upload-script/package.json
+++ b/upload-script/package.json
@@ -2,7 +2,8 @@
   "name": "upload-script",
   "version": "1.0.0",
   "dependencies": {
-    "firebase-admin": "^11.9.0"
+    "firebase-admin": "^11.9.0",
+    "lodash": "^4.17.21"
   },
   "type": "module",
   "devDependencies": {
